Cambiar Ubicacion y Cambiar Info - Admin/Home

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 DB_NAME=db_fisio_rh
-DB_USER=postgres
-DB_PASSWORD=Jojadaya
-DB_HOST=localhost
+DB_USER=admin
+DB_PASSWORD=O2J62HMcgMUPKFh6drUzxy64zZawtHjQ
+DB_HOST=dpg-d54s027gi27c73eg51cg-a.oregon-postgres.render.com
 DB_PORT=5432
+
 FLASK_DEBUG=1
 
 JWT_SECRET=12345
