--- a/.env
+++ b/.env
@@ -9,3 +9,15 @@ FLASK_DEBUG=1
 JWT_SECRET=12345
 JWT_ALGORITHM=HS256
 JWT_EXPIRES_MINUTES=480
+
+
+FRONTEND_URL=http://localhost:5173
+
+RESET_TOKEN_EXPIRES_MINUTES=30
+RESET_TOKEN_PEPPER=Q9xA!f3sL@9KpZr_2025_FisioRH
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=jojashleydcha@gmail.com
+SMTP_PASS=pjvs xwoh lblg utfi
+EMAIL_FROM_NAME=Fisioterapia RH
